Add truffle and openzeppelin

--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "eth"
   ],
   "author": "Luke Mitchell <hi@lukemitchell.co>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "truffle": "^4.0.4",
+    "zeppelin-solidity": "^1.5.0"
+  }
 }
