--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ bower_components
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
+# Compiled contracts
+build/*
+
 # Dependency directories
 node_modules/
 jspm_packages/
@@ -56,4 +59,3 @@ typings/
 
 # dotenv environment variables file
 .env
-
